--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -96,13 +96,13 @@
     </header><!-- End Header -->
 
 
-    <div class="container logoContainer">
+    <!-- <div class="container logoContainer">
         <div class="row">
             <div class="col-12 d-flex justify-content-center" >
                 <img src="{% static 'assets/img/bLogo.png' %}" id="heroImage" alt="">
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="block-content" id="blockContent" >
         {% block content %}
@@ -113,25 +113,25 @@
 
 
     <!-- ======= Footer ======= -->
+    <br>
     <footer id="footer" class="footer mt-5 fixed-bottom">
-
-
-
 
         <div class="container d-flex justify-content-between">
             <div>
-                <div class="copyright primary-font-size" style="color: white;">
+                <div class="copyright" style="color: white;">
                     &copy; 2024 Ap1Solutions LLC. All Rights Reserved.
                 </div>
             </div>
-            <div style="margin-top: 22px;">
-                <a href="" class="mx-4 text-white primary-font-size">Terms of services</a>
 
-                <a href="" class="mx-4 text-white primary-font-size">Privacy Policy</a>
+            <div>
+                <a href="" class="mx-4 text-white ">Terms of services</a>
+
+                <a href="" class="mx-4 text-white ">Privacy Policy</a>
 
             </div>
 
         </div>
+
     </footer><!-- End Footer -->
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
