--- a/home/templates/home/signup.html
+++ b/home/templates/home/signup.html
@@ -18,7 +18,7 @@
 {% endif %}
 
 
-<div class="signup-form" style="margin-top: 90px;">
+<div class="signup-form" >
     <form method="post" action="{% url 'signup' %}">
         {% csrf_token %}
 
