--- a/home/static/assets/css/custom.css
+++ b/home/static/assets/css/custom.css
@@ -139,3 +139,56 @@
 .signup-form form a:hover {
     text-decoration: underline;
 }
+
+
+
+
+/* media quires */
+
+#blockContent{
+    padding: 100px 20px;
+}
+#footer{
+    padding: 10px;
+}
+
+
+ .footer, .footer .copyright {
+     font-size: 20px !important;
+ }
+
+ 
+
+@media screen and (max-width:1020px) {
+    .footer{
+        font-size: 15px !important;
+    }
+    .footer .copyright {
+        font-size: 15px!important;
+    }
+
+   .mainForm label{
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width:700px) {
+   .mainForm label{
+        font-size: 15px;
+    }
+
+    .mainForm .form-group{
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .signup-form{
+        width: auto;
+    }
+
+    .form-row{
+            margin-top: 0px!important;
+    }
+}
